// ============================================
// META INFORMATION OBSERVATION/ACTION SPACE
// ============================================
// This file contains the different definitions of the spaces that 
// can utilize to serialize. Examples are: Discrete Spaces, Box Spaces, ...

syntax = "proto3";

package roadwork.system;

message MetaSpaceBox {
    repeated uint32 dimensions = 1; // How many dimensions do we have?

    oneof dimension {
        // @todo: currently double to span multiple, can be expanded to others for more compactness
        MetaSpaceBoxDimensionDouble dimensionDouble = 2;
    }
}

message MetaSpaceBoxDimensionDouble {
    repeated double low = 1;
    repeated double high = 2;

    // Repeated is "packed" by default
    // See "packed": https://developers.google.com/protocol-buffers/docs/proto#options
    // See why it's optimal: https://developers.google.com/protocol-buffers/docs/encoding.html#packed
    repeated double observation = 3;
}

message MetaSpaceDiscrete {
    uint32 n = 1;
}

message MetaSpaceTuple {
    repeated MetaSpaceWrapper spaces = 1;
}

message MetaSpaceWrapper {
    oneof type {
        MetaSpaceBox box = 1;
        MetaSpaceDiscrete discrete = 2;
        MetaSpaceTuple tuple = 3;
    }
}